validate JWT and restrict access to owner or admin
- ownerId is now extracted from JWT during advertisement creation
- Only the owner or users with ROLE_ADMIN can update/delete advertisements
- Added separate endpoints for updating advertisement fields and images
- Marked updateAdvertisementById as @Deprecated